more cleaning. passing back. see email soon

--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -80,7 +80,7 @@ In the sections below, we formally describe the PACKER model and explore its pre
 
 \section{PACKER: An Exemplar Model}
 
-The PACKER model is an extension of the prominent Generalized Context Model of category learning (GCM; \citealp{nosofsky1984choice}). The model assumes that each category is represented by a collection of exemplars within in a $k$-dimensional psychological space, and that generation is constrained by both similarity to members of the target category (the category in which a stimulus is being generated) as well as similarity to members of other categories. 
+The PACKER model is an extension of the prominent Generalized Context Model of category learning (GCM; \citealp{nosofsky1984abbr}). The model assumes that each category is represented by a collection of exemplars within in a $k$-dimensional psychological space, and that generation is constrained by both similarity to members of the target category (the category in which a stimulus is being generated) as well as similarity to members of other categories. 
 
 As in the GCM, the similarity between two examples, $s\left(x_i, x_j\right)$, is an inverse-exponential function of distance:
 \begin{equation}
@@ -104,7 +104,7 @@ p(y) = \dfrac
 where $\theta$ ($\theta \geq 0$) controls response determinism. 
 
 \subsection{Summary}
-The proposed PACKER model suggests people generate categories by minimizing between-category similarity and maximizing within-category similarity. The underlying processes assumed by PACKER are highly similar to those in the GCM \citep{nosofsky1984choice}, with the only alteration being that PACKER aggregates positive- and negative-valued similarities, rather than only aggregating positive-valued similarities.
+The proposed PACKER model suggests people generate categories by minimizing between-category similarity and maximizing within-category similarity. The underlying processes assumed by PACKER are highly similar to those in the GCM, with the only alteration being that PACKER aggregates positive- and negative-valued similarities, rather than only aggregating positive-valued similarities.
 
 In later sections, we will explore the unique predictions yielded by these design principles. First, however, we contrast PACKER with other category generation models. 
 
@@ -115,8 +115,8 @@ Previous models of category generation focus on capturing the tendency for peopl
 
 
 \subsection{Copy-and-Tweak}
-%JLA: PLEASE CHECK WHAT I WROTE TO MAKE SURE IT"S TRUE OF THEIR MODEL
-The \textit{copy-and-tweak} model of \citet{jern2013probabilistic} formalizes one account of category generation \citep[see][]{ward2002role,ward1995s}. The model proposes that generation is a two-part process: First, learners retrieve an observation from memory, and then they tweak it to be different from the retrieved observation. \citet{jern2013probabilistic} interpreted this proposal in terms of an exemplar model, where participants score potential new exemplars as the summed exponentiated similarity of the potential new exemplar to every retrieved exemplar from the category, and sample from the normalized score distribution over potential exemplars. Given that this was intended for generating new exemplars within known category, we implemented a different formalization of the copy-and-tweak hypothesis.
+%JLA: PLEASE CHECK WHAT I WROTE TO MAKE SURE IT"S TRUE OF THEIR MODEL 
+The \textit{copy-and-tweak} model proposes that generation is a two-part process: First, learners retrieve an observation from memory, and then they tweak it to be different from the retrieved observation. \citet{jern2013probabilistic} interpreted this proposal in terms of an exemplar model, where participants score potential new exemplars as the summed exponentiated similarity of the new exemplar to every exemplar from the category, and sample from the normalized score distribution. Given that this was intended for generating new exemplars within known category, we implemented a different formalization of the copy-and-tweak hypothesis.
 
 In our implementation of the copy-and-tweak model, the probability that a given exemplar $z$ is retrieved from memory is $p(z) = \exp(f_z) / \sum_z{ \exp(f_z) }$, where $f_z$ is a function specifying each item's relative chance of being selected. In our simulations, we set $f_z$ to be $-\lambda$ for members of contrast categories, and $f_z = \lambda$ for members of the target category. The resulting free parameter $\lambda$ ($>0$) thus controls the relative chances that a member of the target category will be retrieved as the source. 
 %\citet{jern2013probabilistic} did not implement any mechanisms to differentially weigh retrieval probabilities, and so our model encompasses theirs as a special case when $\lambda = 0$ (uniform probabilities). JLA: (i reread their model and i don't think this is quite true)
@@ -194,15 +194,15 @@ We recruited 122 participants from Amazon Mechanical Turk from the US equally as
     \end{center}
 \end{figure}
 
-\subsection{Procedure}
+\subsubsection{Procedure}
 
 Participants began the experiment with a short training phase (3 blocks of 4 trials), where they observed exemplars belonging to the `Alpha' category. Participants were instructed to learn as much as they can about the Alpha category, and that they would answer a series of test questions afterwards. On each trial, a single Alpha category exemplar was presented, and participants were given as much time as they desired before moving on. Exemplars were randomly ordered within each block. Participants were shown the range of possible colors and sizes prior to training.
 
 Following the training phase, participants were asked to generate four examples belonging to another category called `Beta'. Participants were instructed that members of the Beta category could be quite similar or different depending on what they think makes the most sense for the category, but that they were not allowed to make the same example twice. As in \citet{jern2013probabilistic}, generation was completed using a sliding-scale interface. Participants were presented with two scales that controlled the dimensions of the generated example. An on-screen preview of the example updated whenever one of the features was changed. Participants could generate any example along an evenly-spaced 9x9 grid, except for any previously generated Beta exemplars. Neither the members of the Alpha category nor the previously generated Beta examples were visible during generation. 
 
-\subsection{Results}
+\subsubsection{Results}
 
-Because the conditions differ only in their location along the y-axis (see Figure \ref{fig:middle-bottom-conditions}), we focus on how Beta exemplars are generated above and below the contrast category. Several sample Beta categories are depicted in Figure \ref{fig:beta.samples}. As is evident in Figure \ref{fig:beta.samples}, we observed a great deal of individual differences in generation strategy: Whereas some participants generated all four Beta examples within a narrow y-axis range, others generated Beta examples along a wide range. 
+Because the conditions differ only in their location along the y-axis (see Figure \ref{fig:middle-bottom-conditions}), we focus on how Beta exemplars are generated above and below the contrast category. Several sample Beta categories are depicted in Figure \ref{fig:beta.samples}. As is evident in Figure \ref{fig:beta.samples}, we observed large individual differences in generation strategy: Whereas some participants generated all four Beta examples within a narrow y-axis range, others generated Beta examples along a wide range. 
 
 To evaluate the key predictions of PACKER, we determined the number of participants in each condition who placed at least one Beta examplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:subset-table}. Fisher's Exact Tests reveal that more Middle participants generated a Beta exemplar in the bottom row , $p < 0.001$, but the conditions did not differ in use of the top of the space, $p = 0.16$. More Middle participants placed Beta exemplars in the top \textit{and} bottom rows, $p = 0.038$. 
 
@@ -267,24 +267,24 @@ $\gamma=12.006$  & $\tau=0.415$ & $\nu=0.451$  \\
 The model-fitting results above follow directly from the design of our experiment. Because distributional structure is the primary determinant of generation in the copy-and-tweak and hierarchical sampling models, those models have no basis to predict any differences between Middle and Bottom conditions (which do not differ in distributional structure). 
 
 \subsection{Individual Differences}
+%In future work, we intend to explore more systematically the role of PACKER's parameters in different subtypes of performance. For example, whereas the tight cluster profile could be explained with a moderately negative $\phi$ and a strongly positive $\gamma$, the four corners profile could be simulated with a strongly negative $\phi$ and $\gamma\leq0$.
+%While it is important that any model be able to explain different types of performance with the same parameter values, these radical differences in generation are difficult to account for under a single set of parameters.
+Our behavioral results showed that, in general, generated categories consist of item that are dissimilar to members of opposite categories, and similar to members of the their own category. There were four typical patterns of Beta categories: tightly clustered, four corners, `column'-like categories (varying along the y-axis but not the x-axis), others created `row'-like categories (see Figures \ref{fig:beta.samples} and \ref{fig:distance.figs}). Here, we explore the role of PACKER's different attention weights ($w_1$ and $w_2$) in producing row-like or column-like categories.
 
-Our behavioral results showed that, in general, generated categories consist of item that are (A) dissimilar to members of opposite categories, and (B) similar to members of the their own category. However, as shown in Figures \ref{fig:beta.samples} and \ref{fig:distance.figs}, we observed a great deal of individual differences in generation strategy. Four representative patterns of the generated Beta category were observed: tightly clustered, four corners, `column'-like categories (varying along the y-axis but not the x-axis), others created `row'-like categories. While it is important that any model be able to explain different types of performance with the same parameter values, these radical differences in generation are difficult to account for under a single set of parameters.
-
-In future work, we intend to explore more systematically the role of PACKER's parameters in different subtypes of performance. For example, whereas the tight cluster profile could be explained with a moderately negative $\phi$ and a strongly positive $\gamma$, the four corners profile could be simulated with a strongly negative $\phi$ and $\gamma\leq0$. Here, we briefly explore the role of the attention weights ($w_1$ and $w_2$, in Equation \ref{eq:similarity}) in producing row-like or column-like categories.
-
+%JLA: Move PACKER to be between Behavioral and Copy and Tweak. Also, I think this will take up less space as a row figure.
 \begin{figure}[ht!]
     \begin{center}
     \inputpgf{figs/}{range-diff-gradient.pgf}
-    \caption{Generated category structure as a function of location in the domain. Orange areas in each gradient correspond to stimuli that were commonly generated into category possessing greater y-axis range (columns). Purple areas correspond to categories possessing greater x-axis range. White areas correspond to equal range along both features (or infrequent generation).}
+    \caption{Generated category structure as a function of location. Orange areas in each gradient correspond to stimuli that were commonly generated into category possessing greater y-axis range (columns). Purple areas correspond to categories possessing greater x-axis range. White areas correspond to equal range along both features (or infrequent generation).}
     \label{fig:range-diff-gradient}
     \end{center}
 \end{figure}
 
-For each stimulus in the domain, we computed the difference in range between the features (e.g., $range(size) - range(color)$) across every generated category in which that stimulus was a member. Taking the average of these range differences yields a gradient describing how, on average, categories were distributed for each stimulus. These data, depicted in the top panels of Figure \ref{fig:range-diff-gradient} reveal a highly systematic relationship between category structure and category location. Whereas column-like categories more often include stimuli to the left or right of the Alpha class, row-like categories appear above and below the Alpha class.  Thus, even beyond generating Betas in locations not occupied by the Alphas, participants appear to modify the distributional structure of their categories in order to maximize distance from the Alphas.
+For each stimulus in the domain, we computed the difference in range between the features (e.g., $range(size) - range(color)$) across every generated category in which that stimulus was a member. Taking the average of these range differences yields a gradient describing how, on average, categories were distributed for each stimulus. These data, depicted in the top panels of Figure \ref{fig:range-diff-gradient} reveal a highly systematic relationship between category structure and category location. Whereas column-like categories more often include stimuli to the left or right of the Alpha class, row-like categories appear above and below the Alpha class.  Thus, participants modify the distributional structure of new categories to the maximize distance from the contrast category.
 
-To simulate this finding, we set the attention weight parameters in PACKER and copy-and-tweak separately for each participant. To simulate the hierarchical sampling model we set the domain covariance prior, $\Sigma_0$, separately for each participant. The other free parameters were set as in Table \ref{table:model-fits}. While there exist methods to find the optimal attention weights for a given classification \citep[see][]{vanpaemel2012using}, for ease of computation we simply approximated the weights based on the inverse of each feature's range: $w_k \propto range(k)^{-1}$. Thus, the Alpha and Beta categories are assumed to be distinct along dimensions that the Betas do not vary on. We then simulated 50 Beta categories with each participant's weighting scheme to obtain a sense of how the relative importance of each dimension affects what types of categories are generated and where they are generated. 
+To simulate this finding, we set the attention weight parameters in PACKER and copy-and-tweak separately per participant. To simulate the hierarchical sampling model we set the domain covariance prior, $\Sigma_0$, separately for each participant. The other free parameters were set as in Table \ref{table:model-fits}. While there exist methods to find the optimal attention weights for a given classification \citep[see][]{vanpaemel2012using}, for ease of computation we simply approximated the weights based on the inverse of each feature's range: $w_k \propto range(k)^{-1}$. Thus, the Alpha and Beta categories are assumed to be distinct along dimensions that the Betas do not vary on. We then simulated 50 Beta categories with each participant's weighting scheme to obtain a sense of how the relative importance of each dimension affects what types of categories are generated and where they are generated. 
 
-The results, depicted in Figure \ref{fig:range-diff-gradient}, support PACKER's predictions. When the x-axis is more strongly weighted, PACKER creates column categories to the sides of the Alphas. Conversely, when the y-axis is weighted, PACKER creates row categories above and below the Betas. This behavior falls out from the nature of selective attention: Dimensions with more weighting have a sharper similarity gradient. For example, when the x-axis is weighted more, PACKER favors Beta categories with more within-class similarity (less range), and less between-class similarity along the x-axis, resulting in column-like categories.
+The results, depicted in Figure \ref{fig:range-diff-gradient}, support PACKER's predictions. When the x-axis is weighted more, PACKER creates column categories to the sides of the Alphas. Conversely, when the y-axis is weighted more, PACKER creates row categories above and below the Alphas. This behavior falls out from the nature of selective attention: Dimensions weighted more have a sharper similarity gradient. For example, when the x-axis is weighted more, PACKER favors Beta categories with more within-class similarity (less range), and less between-class similarity along the x-axis, resulting in column-like categories.
 
 The hierarchical sampling and copy-and-tweak models do not often create categories with strong range differentials. However, when they do, the categories tend to show the opposite pattern: Columns are placed above and below the Alphas, rows are to the side of the Alphas. In the hierarchical sampling model, the position of contrast category is not considered when generating new items. Only the distributional structure of the contrast category and items already in the target category are considered. The model simulates row/column categories by assuming there is more x- or y-axis variance in the domain, essentially stretching the generated category distribution along that axis, and shrinking it along the opposite axis. However, because the Beta category distribution is centered in the middle of the space prior to the first trial, the model is most likely to generate items directly to the side of the Alphas if the x axis is weighted, or above/below the Alphas if the y-axis is weighted. Future generated items will follow from this distribution, and thus weighting the x-axis results row categories that possess the same y-axis position as the Alphas. Conversely, weighting the y-axis results in column categories that share the the same x-axis position as the Alphas.
 
