--- a/Manuscripts/cogsci-2017/references.bib
+++ b/Manuscripts/cogsci-2017/references.bib
@@ -26,6 +26,16 @@
   publisher={Elsevier}
 }
 
+@article{shi10,
+  title = {Exemplar models as a mechanism for performing {B}ayesian inference},
+  author = {L. Shi and T. L. Griffiths and N. H. Feldman and A. N. Sanborn},
+  journal = {Psychonomic Bulletin \& Review},
+  volume = {17},
+  number = {4},
+  pages = {443-464},
+  year = {2010}
+}
+
 @article{kurtz2015human,
   title={Human category learning: Toward a broader explanatory account},
   author={Kurtz, Kenneth J},
@@ -98,6 +108,17 @@
   pages={104},
   year={1984},
   publisher={American Psychological Association}
+}
+
+@article{nosofsky1984abbr,
+	title={Choice, similarity, and the context theory of classification.},
+	author={Nosofsky, Robert M},
+	journal={{JEP: LMC}},
+	volume={10},
+	number={1},
+	pages={104-114},
+	year={1984},
+	publisher={American Psychological Association}
 }
 
 @article{nosofsky1994comparing,
