nbc pass back to joe

--- a/Manuscripts/cogsci-2017/references.bib
+++ b/Manuscripts/cogsci-2017/references.bib
@@ -102,23 +102,12 @@
 @article{nosofsky1984choice,
   title={Choice, similarity, and the context theory of classification.},
   author={Nosofsky, Robert M},
-  journal={Journal of Experimental Psychology: Learning, memory, and cognition},
+  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
   volume={10},
   number={1},
   pages={104},
   year={1984},
   publisher={American Psychological Association}
-}
-
-@article{nosofsky1984abbr,
-	title={Choice, similarity, and the context theory of classification.},
-	author={Nosofsky, Robert M},
-	journal={{JEP: LMC}},
-	volume={10},
-	number={1},
-	pages={104-114},
-	year={1984},
-	publisher={American Psychological Association}
 }
 
 @article{nosofsky1994comparing,
