--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -7,23 +7,6 @@
 \usepackage{mathtools}
 \usepackage[natbibapa]{apacite}
 
-%though some work has recently been conducted using traditional classification learning approaches . 
-%Similar results were obtained in a more recent study conducted within a traditional categorization paradigm.
-
-%each example's degree of contribution toward generation. PACKER sets according $f_j$ . $\hat{f_j} = \phi$ for known members of contrast categories, $\hat{f_j} = \gamma$ for members of the target category. 
-
-%%Results such as these have motivated formal accounts of generation that explicitly invoke the idea that people re-purpose existing knowledge to generate something new -- either by copying-and-tweaking an observation retrieved from memory \citep{ward2002role,ward1995s}, or by abstracting the distributional structure of categories in the domain \citep{jern2013probabilistic}.
-
-%Rather than evaluate PACKER on the benchmarks reviewed above, however, we instead focus on testing predictions made by PACKER that distinguish it from previous approaches.
-
-%The attention weights are of interest in explaining individual differences in generation strategy (discussed below), but for our formal simulations they are set uniformly.
-
-% so that is 1 when specifying whether $y$ exceeds the similarity threshold, $\tau$, which is treated as a free parameter ($0<\tau\leq1$). $g = 1$ when $s(y,z) < \tau$ and $g = 0$ otherwise. Thus, exemplars exceeding the similarity threshold will not be generated, but exemplars just under the threshold are most likely. \citet{jern2013probabilistic} did not implement any similarity threshold mechanism, and so their model is the special case where $\tau = 1$ (any exemplar may be selected).
-
-%JLA: I took this one out because it's not really something we're dealing with in our paper.
-%Further, exemplars drawn from the same species were less variable than animals drawn from different species, and possessed features that were adaptive for their environment (as is the case on Earth).
-
-
 
 % set up PGF
 \usepackage{pgfplots}
@@ -61,7 +44,9 @@ Categorization, exemplar models, category generation, creative cognition, comput
 
 The creation of new concepts and ideas is among the most interesting -- yet infrequently studied -- capabilities of human cognition. This paper focuses on one topic within the broader field of creative cognition: category generation. Foundational work on this topic \citep[e.g.,][]{smith1993constraining,ward2002role,ward1994structured,ward1995s} has focused on the role of prior knowledge in generating novel concepts. A core phenomenon is that people generate categories with similar distributional properties as existing categories. For example, \citet{ward1994structured} asked participants to generate species of plants and animals that might exist on other planets. Generation was strongly constrained by prior knowledge of Earth species: People generated species with the same features as those found on Earth (e.g., eyes, legs, wings) and possessing the same feature correlations observed on Earth (e.g., feathers co-occur with wings). 
 
-Recent work has proposed and tested formal models of category generation. \citet{jern2013probabilistic} trained participants on experimenter-defined categories composed of exemplars within an artificial three-dimensional domain. After a short training phase, participants were asked to generate exemplars from a new category. Participants were provided with a set of scales to adjust the feature values of each generated stimulus, and were given unlimited time to create each example. As in the classic \cite{ward1994structured} experiment, \citet{jern2013probabilistic} found that generated categories possessed the same feature variance and correlations as the experimenter-defined categories in the domain. They evaluated different possible computational models of how people generate categories (such as an exemplar-based "copy-and-tweak" model) and found that a hierarchical Bayesian model (which generates categories by abstracting the distributional structure of the domain) provided the strongest account of the behavioral results.
+Recent work has proposed and tested formal models to explain these observations. \citet{jern2013probabilistic} trained participants on experimenter-defined categories composed of exemplars within an artificial three-dimensional domain. After a short training phase, participants were asked to generate exemplars from a new category. Participants were provided with a set of scales to adjust the feature values of each generated stimulus, and were given unlimited time to create each example. As in the classic \cite{ward1994structured} experiment, \citet{jern2013probabilistic} found that generated categories possessed the same feature variance and correlations as the experimenter-defined categories in the domain. 
+
+\citet{jern2013probabilistic} tested several different computational models on their data. Most relevant to the present investigation, they tested a `copy-and-tweak' model that generates items by copying and changing previous observations, and a hierarchical Bayesian model that uses the structure of known categories to infer the structure of new ones. The authors found that the hierarchical Bayesian model provided the strongest account of the behavioral results.
 
 
 \begin{figure*}
@@ -87,9 +72,9 @@ As in the GCM, the similarity between two examples, $s\left(x_i, x_j\right)$, is
 \end{equation}
 where $w_k$ is the attention weighting of dimension $k$ ($w_k \geq 0$ and $\sum_k{w_k} = 1$), accounting for the relative importance of each dimension in similarity calculations, and $c$ ($c>0$) is a specificity parameter controlling the spread of exemplar generalization. For simplicity, simulations will use uniform attention weights, except in our discussion of individual differences.  
 
-To generate a new example, the model considers both the similarity to examples from contrast categories as well as the similarity to examples (if any exist) in the target category. The aggregated similarity $a$ between generation candidate $y$ and stored exemplars $x$ is $a(y, x) = \sum_j{f(x_j) s(y, x_j)}$, where $f(x_j)$ is a function specifying the extent to which each exemplar contributes to the target category. For brevity, we abbreviate $f(x_j)$ as $f_j$. PACKER sets $f_j$ depending on exemplar $j$'s category membership: $f_j = \phi$ if $x_j$ is a member of the contrast category, and $f_j = \gamma$ if $x_j$ is a member of the target category. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of contrast- and target-category similarity, respectively (see Fig \ref{fig:example-prob-spaces}). Larger absolute values result in greater consideration of those exemplars, with values of 0 eliminating their effect. A negative value for $f_j$ produces a `repelling' effect (exemplars are less likely to be generated nearby $x_j$). Conversely, a positive value for $f_j$ produces an `attracting' effect (exemplars are more likely to be generated nearby $x_j$). 
+To generate a new example, the model considers both the similarity to examples from contrast categories as well as the similarity to examples (if any exist) in the target category. The aggregated similarity $a$ between generation candidate $y$ and stored exemplars $x$ is $a(y, x) = \sum_j{f(x_j) s(y, x_j)}$, where $f(x_j)$ is a function specifying the extent to which each exemplar contributes to the target category. For brevity, we abbreviate $f(x_j)$ as $f_j$. PACKER sets $f_j$ depending on exemplar $j$'s category membership: $f_j = \phi$ if $x_j$ is a member of a contrast category, and $f_j = \gamma$ if $x_j$ is a member of the target category. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of contrast- and target-category similarity, respectively (see Figure \ref{fig:example-prob-spaces}). Larger absolute values result in greater consideration of those exemplars, with values of 0 eliminating their effect. A negative value for $f_j$ produces a `repelling' effect (exemplars are less likely to be generated nearby $x_j$). Conversely, a positive value for $f_j$ produces an `attracting' effect (exemplars are more likely to be generated nearby $x_j$). 
 
-Recall that we proposed that categories are generated by balancing two constraints: New categories should be different from existing categories, and exemplars belonging to the same category should be similar to one another. This is realized in PACKER when $\phi < 0$, and $\gamma > 0$. Negative values for $\phi$ encourage $y$ to be distant from the contrast category (as similarity to contrast category exemplars are subtracted during aggregation). Positive values for $\gamma$ encourage $y$ to be close to other exemplars of the target category. When $|\phi| = \gamma$, the repulsion effect from the contrast category is equal to the attraction effect to the target category.
+PACKER's core proposal is that new categories should be different from existing categories, and same-category exemplars should be similar to one another. This is realized when $\phi \leq 0$, and $\gamma \geq 0$. Negative $\phi$ values encourage $y$ to be distant from the contrast category (as similarity to contrast category exemplars are subtracted during aggregation). Positive $\gamma$ values encourage $y$ to be close to other exemplars of the target category. When $|\phi| = \gamma$, the repulsion effect from contrast categories is equal to the attraction effect to the target category.
 
 The probability that a given candidate $y$ will be generated is evaluated using an Exponentiated \citet{luce1977choice} choice rule. Candidates with greater values of $a$ are more likely to be generated than candidates with smaller values:
 \begin{equation}
@@ -101,7 +86,7 @@ p(y) = \dfrac
 where $\theta$ ($\theta \geq 0$) controls response determinism. 
 
 \subsection{Summary}
-The proposed PACKER model suggests people generate categories by minimizing between-category similarity and maximizing within-category similarity. The underlying processes assumed by PACKER are highly similar to those in the GCM. The main difference is PACKER aggregates positive- and negative-valued similarities, rather than only aggregating positive-valued similarities. In later sections, we will explore the unique predictions yielded by these design principles. First, however, we contrast PACKER with other category generation models. 
+The proposed PACKER model suggests people generate categories by minimizing between-category similarity and maximizing within-category similarity. The underlying processes assumed by PACKER are highly similar to those in the GCM. The main difference is that PACKER aggregates positive- and negative-valued similarities, rather than only aggregating positive-valued similarities. In later sections, we will explore the unique predictions yielded by these design principles. First, however, we contrast PACKER with other category generation models. 
 
 \section{Previous Accounts of Category Generation}
 
@@ -111,7 +96,7 @@ Previous models of category generation focus on capturing the tendency for peopl
 \subsection{Copy-and-Tweak}
 The \textit{copy-and-tweak} model proposes that generation is a two-part process: First, learners retrieve an observation of the target class from memory, and then they tweak it to make something new. \citet{jern2013probabilistic} interpreted this proposal in terms of an exemplar model using the GCM \citep{nosofsky1984choice}. Formally, their model is equivalent to PACKER with $\{\phi = 0$, $\gamma = 1\}$ (see Figure \ref{fig:example-prob-spaces}). To allow for more flexible performance, and to explicitly formalize the `tweak' procedure, we slightly generalized their implementation.
 
-In our copy-and-tweak model, all observations $z$ from the target class are equally likely to be retrieved as the source. The first exemplar is generated uniformly at random over stimulus space. After a source exemplar is retrieved, the similarity between generation candidates $y$ and the retrieved exemplar is computed as per Equation \ref{eq:similarity}. The model's goal is to generate an item that is similar to $z$, but does not exceed a given similarity threshold: The generated item should be copied, but tweaked. Formally, the probability that candidate exemplar $y$ will be generated based on a source exemplar $z$ is 
+In our copy-and-tweak model, all observations $z$ from the target class are equally likely to be retrieved as the source. When there are no observations from the target class, the first exemplar is generated uniformly at random over stimulus space. After a source exemplar is retrieved, the similarity between generation candidates $y$ and the retrieved exemplar is computed as per Equation \ref{eq:similarity}. The model's goal is to generate an item that is similar to $z$, but does not exceed a given similarity threshold: The generated item should be copied, but tweaked. Formally, the probability that candidate exemplar $y$ will be generated based on a source exemplar $z$ is 
 
 \begin{equation}
     p(y|z)  = \dfrac
@@ -131,7 +116,7 @@ Based on several results inconsistent with the copy-and-tweak account, \citet{je
 
 Each category's exemplars are assumed to be a multivariate Normal distribution with parameters ($\mu, \Sigma$). Each category's covariance matrix is assumed to be inverse-Wishart distributed with parameters ($v$, $\kappa,$ and $\Sigma_D$).\footnote{Note that \citet{jern2013probabilistic}'s model is slightly different, as they used a non-conjugate model. Their model acts very similar to our version of it and receives comparable fits.} $\Sigma_D$ is the covariance matrix shared between categories. We assume the shared covariance matrix $\Sigma_D$ is generated from a Wishart distribution (for conjugacy) with parameters $v_0$, $\kappa_0$, and $\Sigma_0$. We set $\nu_0 = \kappa_0 = 1$, and $\Sigma_0 = \rho {\bf I}$, where $\rho$ is a free parameter controlling the expected variance of dimensions (dimensions of the shared covariance matrix are expected to be uncorrelated) and ${\bf I}$ is the identity matrix.
 
-To simplify the model predictions, we used {\em maximum a posteriori} (MAP) estimates for the hidden parameters and then generated new categories based on those estimates. Due to conjugacy, the MAP estimate for the shared covariance matrix $\Sigma_D = \Sigma_0 + \sum_c{C_c}$, where $C_c$ is the empirical covariance matrix of category $c$. The MAP estimate of the covariance matrix for category $B$ is 
+To simplify the model predictions, we used {\em maximum a posteriori} (MAP) estimates for the hidden parameters and then generated new categories based on those estimates. Due to conjugacy, the MAP estimate for the shared covariance matrix $\Sigma_D = \Sigma_0 + \sum_c{C_c}$, where $C_c$ is the empirical covariance matrix of category $c$. The MAP estimate of the covariance matrix for the target category $B$ is 
 \begin{equation}
   \Sigma_B = \left[ \Sigma_D \nu + C_B +
     \dfrac
@@ -151,7 +136,6 @@ Generated exemplars are drawn from a multivariate Normal distribution specified 
     {\sum_i \exp( \theta \cdot {\rm Normal}(y_i; \mu_{B}, \Sigma_{B}))} 
 \end{equation}
 where $\theta$ is a response determinism parameter and ${\rm Normal}(y; \mu, \Sigma)$ denotes a multivariate Normal density evaluated at $y$. 
-%JLA: There's something funky going on with the notation. I got confused by your noation, so hopefully you can update what i did to be consistent with the rest.
 
 \section{Behavioral Experiment}
 
@@ -166,7 +150,7 @@ where $\theta$ is a response determinism parameter and ${\rm Normal}(y; \mu, \Si
 
 The copy-and-tweak and hierarchical sampling models were designed to explain effects of prior knowledge on the structure of categories, and so these models assume little about where in stimulus space categories are likely to be generated. Indeed, when there are no known examples of the target category, both models assume that generation is random. PACKER is thus unique in its prediction that contrast categories should influence both the structure and location of generated categories. The behavioral experiment described below was designed to test this key prediction. 
 
-The experiment follows the paradigm developed by \citet{jern2013probabilistic}: first, participants learn members of a known category (`Alpha', or `A'), and are then asked to generate exemplars belonging to a new category (`Beta', or `B'). We developed two Alpha categories (see Figure \ref{fig:middle-bottom-conditions}): the `Bottom' Alpha category is a tight cluster in the bottom-center of the space, and the `Middle' Alpha category is identical except that it lies in the center of stimulus space. The two categories only differ in their location, not in  distributional structure. 
+The experiment follows the paradigm developed by \citet{jern2013probabilistic}: first, participants learn members of a known category (`Alpha', or `A'), and are then asked to generate exemplars belonging to a new category (`Beta', or `B'). We developed two Alpha categories (see Figure \ref{fig:middle-bottom-conditions}): the `Bottom' Alpha category is a tight cluster in the bottom-center of the space, and the `Middle' Alpha category is identical except that it lies in the center of stimulus space.
 
 
 
@@ -196,11 +180,11 @@ We recruited 122 participants from Amazon Mechanical Turk from the US equally as
 
 Participants began the experiment with a short training phase (3 blocks of 4 trials), where they observed exemplars belonging to the `Alpha' category. Participants were instructed to learn as much as they can about the Alpha category, and that they would answer a series of test questions afterwards. On each trial, a single Alpha category exemplar was presented, and participants were given as much time as they desired before moving on. Exemplars were randomly ordered within each block. Participants were shown the range of possible colors and sizes prior to training.
 
-Following the training phase, participants were asked to generate four examples belonging to another category called `Beta'. Participants were instructed that members of the Beta category could be quite similar or different depending on what they think makes the most sense for the category, but that they were not allowed to make the same example twice. As in \citet{jern2013probabilistic}, generation was completed using a sliding-scale interfaceTwo scales controlled the dimensions of the generated example. An on-screen preview of the example updated whenever one of the features was changed. Participants could generate any example along an evenly-spaced 9x9 grid, except for any previously generated Beta exemplars. Neither the members of the Alpha category nor the previously generated Beta examples were visible during generation. 
+Following the training phase, participants were asked to generate four examples belonging to another category called `Beta'. Participants were instructed that members of the Beta category could be quite similar or different depending on what they think makes the most sense for the category, but that they were not allowed to make the same example twice. As in \citet{jern2013probabilistic}, generation was completed using a sliding-scale interface. Two scales controlled the features of the generated example. An on-screen preview of the example updated whenever one of the features was changed. Participants could generate any example along an evenly-spaced 9x9 grid, except for any previously generated Beta exemplars. Neither the members of the Alpha category nor the previously generated Beta examples were visible during generation. 
 
 \subsubsection{Results}
 
-Because the conditions differ only in their location along the y-axis, we focus on how Beta exemplars are generated above and below the contrast category. Several sample Beta categories are depicted in Figure \ref{fig:beta.samples}. As is evident in Figure \ref{fig:beta.samples}, we observed broad individual differences in generation strategy: Whereas some participants generated all four Beta examples within a narrow y-axis range, others generated Beta examples along a wide range. 
+Several sample Beta categories are depicted in Figure \ref{fig:beta.samples}. Because the conditions differ only in their location along the y-axis, we first focus on how Beta exemplars are generated above and below the contrast category. As is evident in Figure \ref{fig:beta.samples}, we observed broad individual differences in generation strategy: Whereas some participants generated all four Beta examples within a narrow y-axis range, others generated Beta examples along a wide range. 
 
 To evaluate the key predictions of PACKER, we determined the number of participants in each condition who placed at least one Beta examplar on the top and bottom `rows' of the space (the maximum and minimum possible y-axis value, respectively). The resulting contingencies data are shown in Table \ref{table:subset-table}. Fisher's Exact Tests reveal that more Middle participants generated a Beta exemplar in the bottom row , $p < 0.001$, but the conditions did not differ in use of the top of the space, $p = 0.16$. More Middle participants placed Beta exemplars in the top \textit{and} bottom rows, $p = 0.038$. 
 
@@ -212,7 +196,7 @@ To evaluate the key predictions of PACKER, we determined the number of participa
 \begin{tabular}{ l r r}
     \textbf{Middle}         & Used top row & No top row \\
     \hline
-    Used bottom rows       &  28 & 18  \\
+    Used bottom row       &  28 & 18  \\
     No bottom row          &  11 &  4  \\
     \\
     \textbf{Bottom}         & Used top row & No top row \\
@@ -225,14 +209,14 @@ To evaluate the key predictions of PACKER, we determined the number of participa
 
 To evaluate PACKER's other predictions, we computed the number of exemplars produced at different distances to the center of the Alpha category. These data (Figure \ref{fig:distance.figs} left) reveal a strong preference for stimuli that are dissimilar to the Alpha category members: maximally distant items were by far the most frequently generated. 
 
-Finally, we computed for each participant the average distance between exemplars belonging to the same and opposite categories. These data (Figure \ref{fig:distance.figs} right) show that, as observed by \citet{ward1994structured}, most people generated Beta categories in which members are closer to one another than they are to members of the Alpha category (i.e., more between- than within-category distance). We did however, observe a notable subset of individuals with greater within-class distance. These individuals tended to adopt a `corners' approach, in which a Beta examples were placed almost exclusively in the corners of the space.
+Finally, we computed for each participant the average distance between exemplars belonging to the same and opposite categories. These data (Figure \ref{fig:distance.figs} right) show that, as observed by \citet{ward1994structured}, most people generated Beta categories in which members are closer to one another than they are to members of the Alpha category (i.e., more between- than within-category distance). We did however, observe a notable subset of individuals with greater within-class distance. These individuals tended to adopt a `corners' approach, in which Beta examples were placed almost exclusively in the corners of the space.
 
 
 \subsection{Summary}
 
 Our results support PACKER's predictions: People tend to generate items that are dissimilar from the contrast category and similar to the target category. We observed considerable differences in generation between the Middle and Bottom conditions: Participants in the Bottom condition were less likely to use the bottom row of the stimulus space for generation, and participants in the Middle condition were more likely to create categories spanning the entire y-axis (utilizing the top and bottom row of the space). This latter result is especially interesting as it conflicts with previous results: Qualitatively different types of categories were generated, depending only on the location of the Alphas. 
 
-Some aspects of the results described above are somewhat commonsense: They demonstrate that the location of existing categories also imposes constraints on generation because people tend to generate examples in areas not occupied by existing categories. This principle, however, is not predicted by existing models of generation -- these models were designed to explain distributional correspondences between generated and existing categories.  
+Some aspects of the results described above are somewhat commonsense: They demonstrate that the location of existing categories imposes constraints on generation because people tend to generate examples in areas not occupied by existing categories. This principle, however, is not predicted by existing models of generation -- these models were designed to explain distributional correspondences between generated and existing categories, not effects of contrast.  
 
 \begin{figure}
     \begin{center}
@@ -248,7 +232,12 @@ To obtain an overall sense of each model's ability to explain our results, we fi
 
 Each model's best-fitting parameterization is shown in Table \ref{table:model-fits}. Overall, PACKER outperformed copy-and-tweak and the hierarchical sampling model by a considerable margin ($\sim17\%$ improvement in log-likelihood). The parameter settings associated with PACKER's best fit are exactly as expected: a strong preference for items that are similar to members of the target category but are dissimilar to members of the contrast category. A similar pattern of results was obtained when we only considered the second to fourth exemplars generated by each participant.
 
-Our model-fitting results make sense given the design of the experiment. As the copy-and-tweak and hierarchical sampling models are not influenced by the location of contrast categories within the space, they do not capture the broad tendency for generating categories dissimilar to existing classes. 
+Our model-fitting results make sense given the assumptions made by each model. As the copy-and-tweak and hierarchical sampling models are not influenced by the location of contrast categories within the space, they do not capture the broad tendency for generated items to be dissimilar to existing classes. 
+
+
+\subsection{Individual Differences}
+
+Generally, our behavioral results showed that members of generated categories are dissimilar to opposite categories, and similar to members of their own category. However, we also observed a great deal of individual differences in generation style. Manually inspecting the data reveals four typical patterns (see Figure \ref{fig:beta.samples}): `corners' categories with one Beta example in each corner of the space, tight clusters, `column'-like categories, and `row'-like categories. Here, we explore the role of PACKER's attention weights ($w_1$ and $w_2$) in producing row-like or column-like categories.
 
 \begin{table}
 \centering
@@ -266,11 +255,6 @@ $\gamma=4.250$ & $\theta=5.601$ &  $\rho=1.220$  \\
 \end{tabular}
 \end{table}
 
-\subsection{Individual Differences}
-%In future work, we intend to explore more systematically the role of PACKER's parameters in different subtypes of performance. For example, whereas the tight cluster profile could be explained with a moderately negative $\phi$ and a strongly positive $\gamma$, the four corners profile could be simulated with a strongly negative $\phi$ and $\gamma\leq0$.
-%While it is important that any model be able to explain different types of performance with the same parameter values, these radical differences in generation are difficult to account for under a single set of parameters.
-Generally, our behavioral results showed that generated categories consist of items that are dissimilar to members of opposite categories, and similar to members of their own category. We also observed a great deal of individual differences in generation style. Manually inspecting the data reveals four typical patterns (see Figure \ref{fig:beta.samples}): `corners' categories with one Beta example in each corner of the space, tight clusters, `column'-like categories, and `row'-like categories. Here, we explore the role of PACKER's attention weights ($w_1$ and $w_2$) in producing row-like or column-like categories.
-
 \begin{figure*}
     \begin{center}
     \inputpgf{figs/}{range-diff-gradient.pgf}
@@ -279,25 +263,23 @@ Generally, our behavioral results showed that generated categories consist of it
     \end{center}
 \end{figure*}
 
-For each stimulus in the domain, we computed the difference in range between the features ($range(size) - range(color)$) across every generated category that had the stimulus as member. Taking the average of these range differences yields a gradient describing how, on average, categories were distributed for each stimulus. These data (Fig \ref{fig:range-diff-gradient}) reveal a systematic relationship between category structure and category location. Whereas column-like categories more often include stimuli to the left or right of the Alpha class, row-like categories appear above and below the Alpha class.  Thus, participants modify the distributional structure of new categories to the maximize distance from the contrast category.
+For each stimulus in the domain, we computed the difference in range between the features ($range(size) - range(color)$) across every generated category that had the stimulus as member. Taking the average of these range differences yields a gradient describing how, on average, categories were distributed for each stimulus. These data (Figure \ref{fig:range-diff-gradient}) reveal a systematic relationship between category structure and location. Whereas column-like categories more often include stimuli to the left or right of the Alpha class, row-like categories appear above and below the Alpha class.  Thus, participants modify the distributional structure of new categories to the maximize distance from the contrast category.
 
-To simulate this finding, we set the attention weight parameters in PACKER and copy-and-tweak per participant. The other free parameters were set as in Table \ref{table:model-fits}. While there exist methods to find the optimal attention weights for a given classification \citep[see][]{vanpaemel2012using}, for simplicity we approximated the weights using the inverse of each feature's range: $w_k \propto range(k)^{-1}$. Thus, the Alpha and Beta categories are assumed to be distinct along dimensions that the Betas do not vary on. To simulate the hierarchical sampling model we set the domain covariance prior, $\Sigma_0$, proportional to the range of each feature. We then simulated 50 Beta categories with each participant's weighting scheme to obtain a sense of how the relative importance of each dimension affects what types of categories are generated and where they are generated. 
+To simulate this finding, we set the attention weight parameters in PACKER and copy-and-tweak per participant. The other free parameters were set as in Table \ref{table:model-fits}. While there exist methods to find the optimal attention weights for a given classification \citep[see][]{vanpaemel2012using}, for simplicity we approximated the weights using the inverse of each feature's range: $w_k \propto range(k)^{-1}$. Thus, the Alpha and Beta categories are assumed to be distinct along dimensions that the Betas do not vary on. To simulate the hierarchical sampling model we set the domain covariance prior, $\Sigma_0$, proportional to the range of each feature. We then simulated 50 Beta categories with each participant's weighting scheme to obtain a sense of how the relative importance of each dimension affects what types of categories are generated and where they are generated. The results of these simulations are depicted in Figure \ref{fig:range-diff-gradient}.
 
-The results, depicted in Figure \ref{fig:range-diff-gradient}, support PACKER's predictions. When the x-axis is weighted more, PACKER creates column categories to the sides of the Alphas. Conversely, when the y-axis is weighted more, PACKER creates row categories above and below the Alphas. This behavior falls out from the nature of selective attention: Dimensions weighted more have a sharper similarity gradient. For example, when the x-axis is weighted more, PACKER favors Beta categories with more within-class similarity (less range), and less between-class similarity along the x-axis, resulting in column-like categories.
+When the x-axis is weighted more, PACKER creates column categories to the sides of the Alphas. Conversely, when the y-axis is weighted more, PACKER creates row categories above and below the Alphas. This behavior falls out from the nature of selective attention: Dimensions weighted more have a sharper similarity gradient. For example, when the x-axis is weighted more, PACKER favors Beta categories with more within-class similarity (less range), and less between-class similarity along the x-axis, resulting in column-like categories that differ from the Alphas along the x-axis.
 
 Although differentially weighting the features results in different types of categories from the hierarchical sampling and copy-and-tweak models, the location of the Alpha category does not affect where items will be generated by these models. Thus, row- and column-like categories are not systematically generated in different areas of the stimulus space, resulting in the uniform predictions shown in Figure \ref{fig:range-diff-gradient}.
 
 \section{Discussion}
 The creative use of conceptual knowledge is a fascinating yet understudied topic in categorization. In this paper, we presented a novel exemplar-based approach to explaining category generation. The PACKER model proposes that categories are represented as a collection of exemplars stored in memory, and that members of generated categories should be similar to one another, yet dissimilar to members of opposing categories. Exemplar models can be viewed as Importance-Sampling approximations of Bayesian models \citep{shi10}. So, PACKER can be viewed as a rational process model, approximating the expected density of a new category based on a contrast category. 
 
-In a behavioral study and subsequent formal modeling, we found broad support for the PACKER model. Participants in our study more frequently generated items that are distant from members of contrast categories, and they tended to generate categories with more within-class than between-class similarity. Likewise, we found that the \textit{location} of contrast categories shapes generation by imposing constraints on the areas of space that remain available for a new category. These effects reveal that people tend to generate items that are different from what already exists. However, existing models \citep[see][]{jern2013probabilistic} do not account for these effects. Our formal simulations reveal that PACKER provides a strong account of the phenomena observed behaviorally.
+In a behavioral study and subsequent formal modeling, we found broad support for the PACKER model. Participants in our study more frequently generated items that are distant from members of contrast categories, and they tended to generate categories with more within-class than between-class similarity. Likewise, we found that the \textit{location} of contrast categories shapes generation by imposing constraints on the areas of space that remain available for a new category. Existing models \citep[see][]{jern2013probabilistic}, possessing no mechanisms for category-contrast, do not account for these effects. Our formal simulations reveal that PACKER provides a strong account of the phenomena observed behaviorally.
 
-The PACKER model is, in general, highly expressive in its performance. Under different parameter settings it is capable of generating tightly clustered or highly distributed categories, and adjusting the distribution of categories along each feature. Future work will focus on exploring how individual differences in generation, and whether PACKER can explain previous results \citep{ward1994structured,jern2013probabilistic}.
+The PACKER model is, in general, highly expressive in its performance. Under different parameter settings it is capable of generating tightly clustered or highly distributed categories, and adjusting the distribution of categories along each feature. Future work will focus on exploring individual differences in generation, and whether PACKER can explain previous results in the field \citep{ward1994structured,jern2013probabilistic}.
 
 \section{Acknowledgments}
 Support for this research was provided by the Office of the VCRGE at the UW - Madison with funding from the WARF. We thank Kenneth Kurtz for helpful comments, and Alan Jern and Charles Kemp for providing code and data.
-% any other thanks?
-
 
 
 \bibliographystyle{apacite}
