--- a/Manuscripts/cogsci-2017/paper.tex
+++ b/Manuscripts/cogsci-2017/paper.tex
@@ -34,7 +34,7 @@ Madison, WI 53706 USA
 
 \begin{abstract}
 
-Generating new concepts is an intriguing yet understudied topic in cognitive science. In this paper, we present a novel exemplar model of category generation: PACKER (\textit{Producing Alike and Contrasting Knowledge using Exemplar Representations}). PACKER's core design assumptions are (1) categories are represented as exemplars in a multidimensional psychological space, (2) generated items should be similar to exemplars of the same category, and (3) generated categories should be dissimilar to existing categories. A behavioral study and formal simulations broadly support PACKER's predictions.
+Generating new concepts is an intriguing yet understudied topic in cognitive science. In this paper, we present a novel exemplar model of category generation: PACKER (\textit{Producing Alike and Contrasting Knowledge using Exemplar Representations}). PACKER's core design assumptions are (1) categories are represented as exemplars in a multidimensional psychological space, (2) generated items should be similar to exemplars of the same category, and (3) generated categories should be dissimilar to existing categories. A behavioral study reveals strong effects of contrast- and target-class similarity, which are directly predicted by the PACKER model but are not explained by existing formal approaches. 
 
 \textbf{Keywords:} 
 Categorization, exemplar models, category generation, creative cognition, computational modeling.
@@ -274,9 +274,9 @@ Although differentially weighting the features results in different types of cat
 \section{Discussion}
 The creative use of conceptual knowledge is a fascinating yet understudied topic in categorization. In this paper, we presented a novel exemplar-based approach to explaining category generation. The PACKER model proposes that categories are represented as a collection of exemplars stored in memory, and that members of generated categories should be similar to one another, yet dissimilar to members of opposing categories. Exemplar models can be viewed as Importance-Sampling approximations of Bayesian models \citep{shi10}. So, PACKER can be viewed as a rational process model, approximating the expected density of a new category based on a contrast category. 
 
-In a behavioral study and subsequent formal modeling, we found broad support for the PACKER model. Participants in our study more frequently generated items that are distant from members of contrast categories, and they tended to generate categories with more within-class than between-class similarity. Likewise, we found that the \textit{location} of contrast categories shapes generation by imposing constraints on the areas of space that remain available for a new category. Existing models \citep[see][]{jern2013probabilistic}, possessing no mechanisms for category-contrast, do not account for these effects. Our formal simulations reveal that PACKER provides a strong account of the phenomena observed behaviorally.
+In a behavioral study and subsequent formal modeling, we found broad support for the PACKER model. Participants in our study more frequently generated items that are distant from members of contrast categories, and they tended to generate categories with more within-class than between-class similarity. Likewise, we found that the \textit{location} of contrast categories (as opposed to their structure) shapes generation by imposing constraints on the areas of space that remain available for a new category. Formal simulations reveal that existing models \citep[see][]{jern2013probabilistic}, making no assumptions about category-contrast, do not account for these effects.
 
-The PACKER model is, in general, highly expressive in its performance. Under different parameter settings it is capable of generating tightly clustered or highly distributed categories, and adjusting the distribution of categories along each feature. Future work will focus on exploring individual differences in generation, and whether PACKER can explain previous results in the field \citep{ward1994structured,jern2013probabilistic}.
+The PACKER model is, in general, highly expressive in its performance. Under different parameter settings it is capable of generating tightly clustered or highly distributed categories, and adjusting the distribution of categories along each feature. Future work will focus on exploring the broad degree of individual differences we observed in generation, and whether PACKER can explain previous results in the field \citep{ward1994structured,jern2013probabilistic}.
 
 \section{Acknowledgments}
 Support for this research was provided by the Office of the VCRGE at the UW - Madison with funding from the WARF. We thank Kenneth Kurtz for helpful comments, and Alan Jern and Charles Kemp for providing code and data.
