--- a/Manuscripts/cogsci-2017/references.bib
+++ b/Manuscripts/cogsci-2017/references.bib
@@ -102,7 +102,7 @@
 @article{nosofsky1984choice,
   title={Choice, similarity, and the context theory of classification.},
   author={Nosofsky, Robert M},
-  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  journal={Journal of Experimental Psychology: Learning, Memory, \& Cognition},
   volume={10},
   number={1},
   pages={104},
